--- a/Match_2/Base.lproj/LaunchScreen.storyboard
+++ b/Match_2/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,12 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="ipad9_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -11,15 +16,44 @@
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="lounche_01.png" translatesAutoresizingMaskIntoConstraints="NO" id="Jpx-a7-Qz1">
+                                <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="Jpx-a7-Qz1" secondAttribute="height" multiplier="3:4" id="vYB-6d-syd"/>
+                                </constraints>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo.png" translatesAutoresizingMaskIntoConstraints="NO" id="xHz-m0-PTg">
+                                <rect key="frame" x="242" y="93" width="285" height="184"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="xHz-m0-PTg" secondAttribute="height" multiplier="309:200" id="MJX-1F-jCC"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="xHz-m0-PTg" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="73" id="4eL-Kq-Nzh"/>
+                            <constraint firstItem="xHz-m0-PTg" firstAttribute="width" secondItem="Ze5-6b-2t3" secondAttribute="width" multiplier="0.3705" id="4nA-cf-zFl"/>
+                            <constraint firstItem="Jpx-a7-Qz1" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="Br8-0t-imH"/>
+                            <constraint firstItem="Jpx-a7-Qz1" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Ea5-Mk-Ra8"/>
+                            <constraint firstItem="xHz-m0-PTg" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="UBa-mO-Ykj"/>
+                            <constraint firstItem="Jpx-a7-Qz1" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="Y8h-oO-ITM"/>
+                            <constraint firstItem="Jpx-a7-Qz1" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="arM-n6-QK9"/>
+                            <constraint firstItem="Jpx-a7-Qz1" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="cue-YL-Nvn"/>
+                            <constraint firstItem="Jpx-a7-Qz1" firstAttribute="width" secondItem="Ze5-6b-2t3" secondAttribute="width" id="zYJ-zv-1kr"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="51.5625" y="374.4140625"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="logo.png" width="200" height="200"/>
+        <image name="lounche_01.png" width="2048" height="2732"/>
+    </resources>
 </document>
